--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://database:3306/javatest
+spring.datasource.username=javatest
+spring.datasource.password=M2c5UFc5VW0zWTVxaUVu
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
