--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,20 @@ services:
   database:
     image: mysql:5.7
     container_name: database
-    ports:
-      - 3306:3306
     environment:
       - "MYSQL_DATABASE=javatest"
       - "MYSQL_USER=javatest"
       - "MYSQL_PASSWORD=M2c5UFc5VW0zWTVxaUVu"
       - "MYSQL_ROOT_PASSWORD=M2c5UFc5VW0zWTVxaUVu"
+      - "MYSQL_TCP_PORT=3307"
     networks:
       - test
 
   #  The Application
   app:
-    image: rutsatz/javatest:beta18
+    image: rutsatz/javatest:v1
     container_name: app
-    entrypoint: dockerize -wait tcp://database:3306 -timeout 20s /docker-entrypoint.sh
+    entrypoint: dockerize -wait tcp://database:3307 -timeout 20s /docker-entrypoint.sh
     ports:
       - 8080:8080
     networks:
