--- a/deployments/ingress/ingress.yml
+++ b/deployments/ingress/ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-resource-backend
+#  namespace: develop
   # Annotations são basicamente recursos chave/valor e permitem extender o comportamento
   # dos recursos do kubernetes. O ingress do nginx tem várias anotações que podemos configurar.
   annotations:
